--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -1,9 +1,9 @@
 name: gitartwork from a contribution graph
 on: 
   push:
+    branches:
+      - main
   pull_request:
-  schedule:
-    - cron: '* */24 * * *'
   workflow_dispatch:  
 jobs:
   build:
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: jasineri/gitartwork@v1
         with:
-           user_name: jasineri
-           text: JASINERI
+           user_name: hackmac89
+           text: hackmac89
       - uses: jasineri/simple-push-action@v1
