Removed DependabotAutomerge workflow. Changed Gitartwork name as "hackmac89" was too long.

--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: jasineri/gitartwork@v1
         with:
            user_name: hackmac89
-           text: hackmac89
+           text: Jeffo
       - uses: jasineri/simple-push-action@v1
